<resources>
    <string name="app_name">Bedtime</string>
    <string name="action_settings">Settings</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up_hint">Sign up for new account, enter your email and get started.</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="invalid_email_address_error">Invalid email address</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="add_profile_pic">Add Profile Pic</string>
</resources>
